# DanganStarFall

./: .gitignore  .gitmodules  CMakeLists.txt  icon.svg.import  main.cxx  project.godot  readme.md
Assets/: spritesheet.png.import
Classes/: Bullet.cxx  Bullet.hpp  main.hpp
Scenes/: Asteroid.tscn  Bullet.tscn  HealthComponent.tscn  PhyRect.cxx  SceneAndroid.cxx  SceneAsteroids.cxx  SceneBullets.cxx  SceneEnemies.cxx  SceneGame.cxx  SceneGame.cxx.bak  SceneGame.tscn  SceneStars.cxx  SceneTouchControls.cxx  Scenes.hpp  Ship.tscn  Stars.tscn
Scenes/SceneGame/: CollisionTypes.hpp  Draw.cxx  Entity.cxx  Entity.hpp  InitColliders.cxx  Player.cxx  RecenterWorld.cxx  SceneGame.cxx  SceneGame.hpp  Update.cxx
Scenes/SceneGame/Children/: AllScenes.hpp  SceneAndroid.cxx  SceneAsteroids.cxx  SceneBullets.cxx  SceneEnemies.cxx  SceneStars.cxx
Scripts/: AsteroidsSpawner.gd  AsteroidsSpawner.gd.uid  BulletsHandler.gd  BulletsHandler.gd.uid  Enemy.gd  Enemy.gd.uid  EnemySpawner.gd  EnemySpawner.gd.uid  HealthComponent.gd  HealthComponent.gd.uid  Player.gd  Player.gd.uid  Stars.gd  Stars.gd.uid  StarsSpawner.gd
Systems/: Asteroids.cxx  BulletAsteroidCollision.cxx  Bullets.cxx  Collisions.cxx  Discord.cxx  Enemies.cxx  Entity.cxx  Stars.cxx  index.hpp  main.hpp
Web/: index.apple-touch-icon.png.import  index.html  index.icon.png.import  index.pck  index.png.import
